Full recipe generation + 1.19.4 port